Adding Ids to the vectors

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@ __pycache__
 adb-env
 data/*
 test_data/*
+saved_db_100k/*
+saved_db_1m/*
+saved_db_5m/*
+saved_db_10m/*
+saved_db_15m/*
+saved_db_20m/*
